# pli_pat_schema_builder

./: .gitignore  CLAUDE.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json
.agents/skills/clean-code/: SKILL.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: tracciati_pat.xlsx  tracciati_pli.xlsx
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/controller/: customer.rs  excel.rs  mod.rs  product.rs  settings.rs  template.rs  tracciati.rs
src-tauri/src/repository/: customer.rs  excel.rs  mod.rs  product.rs  settings.rs
src-tauri/src/service/: customer.rs  customer_tests.rs  excel.rs  invoice.rs  mod.rs  product.rs  settings.rs  template.rs
src/lib/: Notice.svelte  Spinner.svelte  TableSkeleton.svelte  customer-repository.ts  i18n.svelte.ts  index.ts  notifications.svelte.ts  page-actions.ts  product-repository.ts  settings-repository.ts  template-repository.ts  ui.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/customers/: +page.svelte
src/routes/products/: +page.svelte
src/routes/templates/: +page.svelte
